@@ -3,30 +3,34 @@
 NAME
 ====
 
-**RakupodObject** - Provides a routine to extract the '$=pod' object from an external Rakupod source
+**RakupodObject** - Provides a routine to extract the '$=pod' object from an external Rakupod source (a file or a string)
 
 SYNOPSIS
 ========
 
 ```raku
 use RakupodObject;
+my $pod-object = extract-rakupod-object $file;
 ```
 
 DESCRIPTION
 ===========
 
-**RakupodObject** is a module that enables easy access to the Rakupod object represented by the Raku variable `$=pod`. That variable (a `Pod::Block`) holds the compiled Rakupod tree in a Raku source file. It is used by external programs whose purpose is to process the Rakupod into other objects, primarily other forms of documentation. See the Raku docs for a complete description of the various `Pod::Block` subtypes and their attributes.
+**RakupodObject** is a module that enables easy access to the Rakupod object represented by the Raku variable `$=pod`. That variable, which is a `Pod::Block` object, holds the complete, compiled Rakupod tree extracted from a Raku source file (or string). (It is the same as the `$=pod` object used by code inside that source file.)
 
-The module exports two multi subroutines.
+It is used by external programs whose purpose is to process the Rakupod into other objects, primarily other forms of documentation. See the Raku docs for a complete description of the various `Pod::Block` subtypes and their attributes.
 
-  * multi sub extract-rakupod-object(IO::Path:D $pod-file --> Pod::Block) is export {...}
+The module exports one subroutine:.
 
-  * multi sub extract-rakupod-object(Str:D $pod-string --> Pod::Block) is export {...}
+    sub extract-rakupod-object(
+        $pod-source # file or string
+        --> Pod::Block
+    ) is export  {...}
 
 Warning
 =======
 
-The exported routines use pragma `MONKEY-SEE-NO-EVAL` so, as is mentioned in the Raku docs, the user is warned of the possibility of system compromise with malicious code in the `EVAL`ed string.
+The exported routine uses pragma `MONKEY-SEE-NO-EVAL` so, as is mentioned in the Raku docs, the user is warned of the possibility of system compromise with malicious code in the `EVAL`ed string.
 
 Credits
 =======
