@@ -2,43 +2,49 @@
 
 =head1 NAME
 
-B<RakupodObject> - Provides a routine to extract the '$=pod' object from an external Rakupod source
+B<RakupodObject> - Provides a routine to extract the '$=pod' object
+from an external Rakupod source (a file or a string)
 
 =head1 SYNOPSIS
-
 =begin code :lang<raku>
-
 use RakupodObject;
-
+my $pod-object = extract-rakupod-object $file;
 =end code
 
 =head1 DESCRIPTION
 
 B<RakupodObject> is a module that enables easy access to the Rakupod
-object represented by the Raku variable C<$=pod>. That variable (a C<Pod::Block>) holds
-the compiled Rakupod tree in a Raku source file. It is used by external
-programs whose purpose is to process the Rakupod into other objects,
-primarily other forms of documentation. See the Raku docs for a complete
-description of the various C<Pod::Block> subtypes and their attributes.
+object represented by the Raku variable C<$=pod>. That variable, which
+is a C<Pod::Block> object, holds the complete, compiled Rakupod tree
+extracted from a Raku source file (or string). (It is the same as the
+C<$=pod> object used by code inside that source file.)
 
-The module exports two multi subroutines.
+It is used by external programs whose purpose is to process the
+Rakupod into other objects, primarily other forms of
+documentation. See the Raku docs for a complete description of the
+various C<Pod::Block> subtypes and their attributes.
 
-=item multi sub extract-rakupod-object(IO::Path:D $pod-file --> Pod::Block) is export  {...}
+The module exports one subroutine:.
 
-=item multi sub extract-rakupod-object(Str:D $pod-string --> Pod::Block) is export  {...}
+=begin code
+sub extract-rakupod-object(
+    $pod-source # file or string
+    --> Pod::Block
+) is export  {...}
+=end code
 
 =head1 Warning
 
-The exported routines use pragma C<MONKEY-SEE-NO-EVAL> so, as is mentioned in the Raku docs,
-the user is warned of the possibility of system compromise with malicious code in
-the C<EVAL>ed string.
+The exported routine uses pragma C<MONKEY-SEE-NO-EVAL> so, as is
+mentioned in the Raku docs, the user is warned of the possibility of
+system compromise with malicious code in the C<EVAL>ed string.
 
 =head1 Credits
 
 The author is indebted to the Raku expert B<Vadim Belman> (AKA
-C<@vrurg>) who provided the routine during the construction of some Rakupod
-tests several years ago. The routine, in its original form, can be
-seen in file
+C<@vrurg>) who provided the routine during the construction of some
+Rakupod tests several years ago. The routine, in its original form,
+can be seen in file
 L<https://github.com/raku/roast/blob/master/S26-documentation/12-non-breaking-space.t>.
 
 =head1 AUTHOR
