@@ -1,9 +1,9 @@
 use Test;
 use RakupodObject;
 
-my $good-pod-file = "t/data/good.rakudoc".IO;
-my $bad-pod-file  = "t/data/bad.rakudoc".IO;
-my $raku-file     = "t/data/raku.raku".IO;
+my $good-pod-file = "t/data/good.rakudoc"; #.IO;
+my $bad-pod-file  = "t/data/bad.rakudoc"; #.IO;
+my $raku-file     = "t/data/raku.raku"; #.IO;
 
 my $good-pod = slurp $good-pod-file;
 my $bad-pod  = slurp $bad-pod-file;
@@ -28,12 +28,14 @@ cmp-ok $good, '~~', Pod::Block, "is a Pod::Block";
 lives-ok {
     $good = extract-rakupod-object $good-pod-file;
 }, "good pod file";
+
 isa-ok $good, Pod::Block::Named;
 cmp-ok $good, '~~', Pod::Block, "is a Pod::Block";
 
 lives-ok {
     $good = extract-rakupod-object $raku-pod;
 }, "good raku file with pod";
+
 cmp-ok $good, '~~', Pod::Block, "is a Pod::Block";
 
 done-testing;
